# pokesword

./: .gitignore  CMakeLists.txt  ToolchainNX64.cmake
lib/gflib3/: CMakeLists.txt
lib/gflib3/include/container/: dynamic_array.h
lib/gflib3/include/core/: allocator.h
lib/gflib3/include/core/engine/: count_object.h  memory_object.h  object_handle.h
lib/gflib3/include/core/mt/: sync_object.h
lib/gflib3/include/gfl/: macros.h
lib/gflib3/include/gfl/container/: dynamic_array.h
lib/gflib3/include/gfl/core/: allocator.h  singleton.h
lib/gflib3/include/gfl/core/engine/: memory_object.h  object_handle.h
lib/gflib3/include/gfl/core/mt/: sync_object.h
lib/gflib3/include/gfl/mem/: internal.h  manager.h  mem.h  memory_resource.h  mutex.hpp
lib/gflib3/include/gfl/text/: msgdata.h
lib/gflib3/include/mem/: manager.h  memory_resource.h
lib/gflib3/include/text/: msgdata.h
lib/gflib3/src/mem/: mem.cpp
lib/gflib3/src/text/: msgdata.cpp
prog/: CMakeLists.txt  main.cpp
